--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -9,7 +9,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0" show="41503">
+      <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
@@ -557,7 +557,7 @@
                 <children>
                   <grid id="2cc47" layout-manager="GridBagLayout">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                       <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
@@ -603,7 +603,7 @@
                   </grid>
                   <grid id="d801a" layout-manager="GridBagLayout">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                       <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
@@ -638,7 +638,7 @@
                   </grid>
                   <component id="b9eac" class="javax.swing.JLabel" binding="figureImg">
                     <constraints>
-                      <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                       <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
@@ -672,7 +672,7 @@
                   </component>
                   <component id="8feec" class="javax.swing.JButton" binding="finishBtn">
                     <constraints>
-                      <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
@@ -707,8 +707,6 @@
                 <constraints/>
                 <properties>
                   <background color="-7751195"/>
-                  <disabledIcon value="icons/novolume 30x30.png"/>
-                  <disabledSelectedIcon value="icons/novolume 30x30.png"/>
                   <doubleBuffered value="true"/>
                   <enabled value="true"/>
                   <hideActionText value="false"/>
