--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,14 +2,14 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1073" height="1038"/>
+      <xy x="20" y="20" width="830" height="600"/>
     </constraints>
     <properties>
-      <preferredSize width="800" height="480"/>
+      <preferredSize width="800" height="600"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0" show="41503">
+      <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
@@ -514,7 +514,7 @@
                   <grid id="8cbcb" binding="leaderboardPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                     <constraints border-constraint="East"/>
                     <properties>
-                      <background color="-3290691"/>
+                      <background color="-1041"/>
                     </properties>
                     <border type="none"/>
                     <children>
@@ -562,13 +562,13 @@
                     </constraints>
                     <properties>
                       <background color="-3290161"/>
-                      <preferredSize width="125" height="100"/>
+                      <preferredSize width="125" height="50"/>
                     </properties>
                     <border type="none"/>
                     <children>
                       <component id="3f2fd" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                           <gridbag top="0" left="0" bottom="20" right="0" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
@@ -577,26 +577,35 @@
                           <text value="Test Results"/>
                         </properties>
                       </component>
-                      <component id="646a5" class="javax.swing.JLabel" binding="scoreTxt">
+                      <component id="dc461" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="3" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                           <gridbag weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <foreground color="-13947600"/>
-                          <preferredSize width="50" height="25"/>
-                          <text value=""/>
+                          <preferredSize width="30" height="15"/>
+                          <text value="/25"/>
                         </properties>
                       </component>
-                      <component id="dc461" class="javax.swing.JLabel">
+                      <component id="646a5" class="javax.swing.JLabel" binding="scoreTxt">
+                        <constraints>
+                          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <foreground color="-13947600"/>
+                          <preferredSize width="30" height="25"/>
+                          <text value="0"/>
+                        </properties>
+                      </component>
+                      <component id="de540" class="javax.swing.JLabel">
                         <constraints>
                           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                           <gridbag weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
-                          <foreground color="-13947600"/>
-                          <preferredSize width="50" height="15"/>
-                          <text value="/25"/>
+                          <text value="Questions correct: "/>
                         </properties>
                       </component>
                     </children>
@@ -608,7 +617,7 @@
                     </constraints>
                     <properties>
                       <background color="-3290161"/>
-                      <preferredSize width="125" height="100"/>
+                      <preferredSize width="125" height="50"/>
                     </properties>
                     <border type="none"/>
                     <children>
@@ -643,24 +652,24 @@
                     </constraints>
                     <properties>
                       <foreground color="-13947600"/>
-                      <preferredSize width="155" height="34"/>
+                      <preferredSize width="150" height="100"/>
                       <text value="historical figure placeholder"/>
                     </properties>
                   </component>
                   <component id="6c3f7" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                       <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <foreground color="-13947600"/>
-                      <preferredSize width="112" height="34"/>
+                      <preferredSize width="112" height="100"/>
                       <text value="Your IQ is similar to: "/>
                     </properties>
                   </component>
                   <component id="1ed86" class="javax.swing.JCheckBox" binding="optBtn">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag top="0" left="0" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
@@ -677,7 +686,7 @@
                     </constraints>
                     <properties>
                       <background color="-7751195"/>
-                      <enabled value="false"/>
+                      <enabled value="true"/>
                       <preferredSize width="100" height="34"/>
                       <text value="Finish"/>
                     </properties>
@@ -707,8 +716,6 @@
                 <constraints/>
                 <properties>
                   <background color="-7751195"/>
-                  <disabledIcon value="icons/novolume 30x30.png"/>
-                  <disabledSelectedIcon value="icons/novolume 30x30.png"/>
                   <doubleBuffered value="true"/>
                   <enabled value="true"/>
                   <hideActionText value="false"/>
