--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="800" height="600"/>
+      <xy x="20" y="20" width="815" height="600"/>
     </constraints>
     <properties>
       <preferredSize width="800" height="600"/>
@@ -312,7 +312,7 @@
             <children>
               <component id="499b9" class="javax.swing.JTextPane" binding="rulesTxt">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                  <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
                   </grid>
                   <gridbag weightx="0.0" weighty="0.0"/>
@@ -328,25 +328,37 @@
               </component>
               <component id="2c4d7" class="javax.swing.JCheckBox" binding="readRules">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
+                  <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="5" left="0" bottom="10" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-2038820"/>
                   <foreground color="-13947600"/>
                   <label value="Tick to agree you have read and understand the rules"/>
+                  <preferredSize width="366" height="34"/>
                   <text value="Tick to agree you have read and understand the rules"/>
                 </properties>
               </component>
               <component id="bf015" class="javax.swing.JButton" binding="startBtn">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="20" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                  <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="10" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-7751195"/>
                   <enabled value="false"/>
                   <text value="Start Quiz!"/>
+                </properties>
+              </component>
+              <component id="bc233" class="javax.swing.JCheckBox" binding="optBtn">
+                <constraints>
+                  <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-7751195"/>
+                  <preferredSize width="100" height="34"/>
+                  <text value="Opt-Out"/>
                 </properties>
               </component>
             </children>
@@ -587,21 +599,9 @@
                       </component>
                     </children>
                   </grid>
-                  <component id="1ed86" class="javax.swing.JCheckBox" binding="optBtn">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag top="0" left="0" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <background color="-7751195"/>
-                      <foreground color="-13947600"/>
-                      <preferredSize width="100" height="34"/>
-                      <text value="OPT-Out"/>
-                    </properties>
-                  </component>
                   <component id="8feec" class="javax.swing.JButton" binding="finishBtn">
                     <constraints>
-                      <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="6" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
