Added validation for names to be letters only and updated questionLbl so it can hold questions better

--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -420,7 +420,7 @@
                       <component id="1ba30" class="javax.swing.JRadioButton" binding="aLbl">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag weightx="0.0" weighty="0.0"/>
+                          <gridbag top="0" left="0" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <font size="14"/>
@@ -432,16 +432,10 @@
                           <text value="Testing text for answer a"/>
                         </properties>
                       </component>
-                      <hspacer id="463c1">
-                        <constraints>
-                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                          <gridbag weightx="0.0" weighty="0.0"/>
-                        </constraints>
-                      </hspacer>
                       <component id="22bf6" class="javax.swing.JRadioButton" binding="bLbl">
                         <constraints>
-                          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag weightx="0.0" weighty="0.0"/>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <gridbag top="0" left="5" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <font size="14"/>
@@ -453,7 +447,7 @@
                       <component id="73481" class="javax.swing.JRadioButton" binding="cLbl">
                         <constraints>
                           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag weightx="0.0" weighty="0.0"/>
+                          <gridbag top="0" left="0" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <font size="14"/>
@@ -464,8 +458,8 @@
                       </component>
                       <component id="6434f" class="javax.swing.JRadioButton" binding="dLbl">
                         <constraints>
-                          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                          <gridbag weightx="0.0" weighty="0.0"/>
+                          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <gridbag top="0" left="5" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <font size="14"/>
@@ -476,7 +470,7 @@
                       </component>
                     </children>
                   </grid>
-                  <component id="b08ad" class="javax.swing.JTextArea" binding="testingQuestionTextForTextArea" default-binding="true">
+                  <component id="b08ad" class="javax.swing.JTextArea" binding="questionLbl">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="50"/>
