--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="815" height="600"/>
+      <xy x="20" y="20" width="1788" height="2064"/>
     </constraints>
     <properties>
       <preferredSize width="800" height="600"/>
@@ -726,6 +726,12 @@
                   <text value=""/>
                 </properties>
               </component>
+              <component id="b09f6" class="javax.swing.JButton" binding="button1" default-binding="true">
+                <constraints/>
+                <properties>
+                  <text value="Button"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="3e3f9" binding="timerPanel" layout-manager="GridBagLayout">
@@ -766,6 +772,13 @@
               <preferredSize width="150" height="35"/>
               <text value="Next"/>
               <visible value="false"/>
+            </properties>
+          </component>
+          <component id="ba231" class="javax.swing.JButton" binding="adminBtn">
+            <constraints/>
+            <properties>
+              <horizontalAlignment value="2"/>
+              <text value="Button"/>
             </properties>
           </component>
         </children>
